--- a/.github/workflows/test_inc.yml
+++ b/.github/workflows/test_inc.yml
@@ -82,7 +82,7 @@ jobs:
           - "3.13"
           - "3.14"
         os:
-          - "ubuntu-24.04"
+          - "ubuntu-slim"
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/download-artifact@v7
@@ -192,7 +192,7 @@ jobs:
   log-aggregation:
     if: success() || failure()
     needs: [stub, runtime, mypy-stubtest]
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-slim
     permissions:
       actions: write
     steps:
