--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ dev = [
 basic = [
     'types-html5lib == 1.1.11.20251117',
     'typing_extensions == 4.15.0',
-    "cssselect == 1.4.0",
+    "cssselect == 1.3.0; python_version <  '3.10'",
+    "cssselect == 1.4.0; python_version >= '3.10'",
     "beautifulsoup4 == 4.14.3",
 ]
 mypy = ["mypy == 1.19.1"]
